[tool.poetry]
name = "equations"
version = "0.1.0"
description = "Сервис для решения уравнений."
authors = ["Yastrebkov Roman <roman@jastrebkov.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
sympy = "^1.11.1"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
